--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -3,7 +3,6 @@ EXPOSE 8080
 WORKDIR /opt/server
 ENV MONGO=true
 COPY package.json /opt/server/
-COPY server.js /opt/server/
-# npm install get the dependencies of node js project
+COPY server.js /opt/server/ 
 RUN npm install
-ENTRYPOINT ["node", "server.js"]
+CMD ["node", "server.js"]
