--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,28 +25,28 @@ services:
     - "80:80"
     depends_on:
     - catalogue
-    # - cart
-    # - user
+    - cart
+    - user
     # - shipping
     # - payment
 
-  # redis:
-  #   image: redis
-  #   container_name: redis
+  redis:
+    image: redis
+    container_name: redis
 
-  # user:
-  #   image: user:1
-  #   container_name: user
-  #   depends_on:
-  #   - redis
-  #   - mongodb
+  user:
+    image: user:1
+    container_name: user
+    depends_on:
+    - redis
+    - mongodb
 
-  # cart:
-  #   image: cart:1
-  #   container_name: cart
-  #   depends_on:
-  #   - redis
-  #   - catalogue
+  cart:
+    image: cart:1
+    container_name: cart
+    depends_on:
+    - redis
+    - catalogue
 
   # mysql:
   #   image: mysql:1
