--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,15 +48,15 @@ services:
     - redis
     - catalogue
 
-  # mysql:
-  #   image: mysql:1
-  #   container_name: mysql
+  mysql:
+    image: mysql:1
+    container_name: mysql
 
-  # shipping:
-  #   image: shipping:1
-  #   container_name: shipping
-  #   depends_on:
-  #   - mysql
+  shipping:
+    image: shipping:1
+    container_name: shipping
+    depends_on:
+    - mysql
 
   # rabbitmq:
   #   container_name: rabbitmq
