--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -1,8 +1,7 @@
 #reduce the image size 18.19.1-alpine3.19
 FROM node:18.19.1-alpine3.19    
 EXPOSE 8080
-# run below user from root 
-RUN addgroup -S roboshop && -S roboshop -G roboshop
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /opt/server
 ENV MONGO=true
 RUN chown roboshop:roboshop /opt/server
